--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,10 @@
 --------------------------------------------------------------*/
 
 html {
+  scroll-behavior: smooth;
+}
+
+html {
   overflow-x: hidden;
 }
 
